# nist-pqc-rag-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.neo4j.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  main.py
docs/: current_state.md
eval/: __init__.py  dataset.py  graph_definition_sanity.jsonl  graph_definition_sanity.py  graph_runtime_ablation.jsonl  graph_runtime_ablation.py  metrics.py  run.py
rag/: ask.py  chunk.py  clean.py  config.py  embed.py  index_bm25.py  index_faiss.py  ingest.py  rag_answer.py  retrieve.py  search.py  search_faiss.py  service.py  text_normalize.py  types.py  versioning.py
reports/: Day1_Summary_n_Project_Guidelines.md  Day2_summary.md  Day3_sumamry.md  Day4_summary.md  ablation_ingest_chunking_202603xx.md  docker_setup_summary_20260220.md  end_of_day3_state.md  full_tree.txt  full_tree_clean.txt  langgraph_bounded_iterative_refinement_report_20260219.md  mini_retrieval_sanity.json  mini_retrieval_sanity.md  notes.md  progress.md  project_overview.md  repo_tree.txt  week2_day1_ingestion_chunking_upgrade_report_20260302.md  week2_day2_retrieval_recovery_report_20260303.md  week2_plan.md  week2_progress.md  week3_docker_setup_report_20260311.md  week3_plan.md  week3_progress.md  week3_repo_grounded_technical_review_20260312.md  week3_sidecar_knowledge_graph_neo4j_review_20260313.md
scripts/: check_artifacts.py  clean_pages.py  docker.ps1  docling_preflight.py  make_chunks.py  mini_retrieval_sanity.py  repo_tree.py
tests/: README.md  check_clean.py  (+33 more)
(+112 files in other folders)
